--- a/layout.css
+++ b/layout.css
@@ -107,3 +107,8 @@ footer {
   align-items: center;
   flex: 0 0 auto;
 }
+.dropdown-content label,
+.dropdown-content input[type="file"] {
+    display: block; /* Makes labels and inputs take up full width on a new line */
+    margin-bottom: 10px; /* Adds space between each item */
+}
