--- a/layout.css
+++ b/layout.css
@@ -58,14 +58,18 @@ footer {
   background-color: #9a9;
 }
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #303030;
-  min-width: 160px;
-  border-radius: 5px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+    display: none;
+    position: absolute;
+    background-color: #303030;
+    min-width: 160px;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 10px;
+    display: flex;
+    flex-direction: column; /* Stacks items vertically */
+    gap: 10px; /* Adds spacing between elements */
+  }
 .dropdown-content a {
   float: none;
   color: white;
@@ -94,6 +98,17 @@ footer {
   border-left: 1px solid grey;
   height: 40px;
 }
+.viewBtn {
+    display: block; /* Ensures labels are stacked vertically */
+    padding: 10px 16px;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+  }
 .help-text {
   margin: auto;
   max-width: 150px;
