--- a/layout.css
+++ b/layout.css
@@ -66,6 +66,9 @@ footer {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+.file-input {
+    display: none; /* Completely hides the input */
+}
 .dropdown-content a {
   float: none;
   color: white;
