--- a/layout.css
+++ b/layout.css
@@ -67,7 +67,12 @@ footer {
   z-index: 1;
 }
 .file-input {
-    display: none; /* Completely hides the input */
+    position: absolute;
+    left: -9999px;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    visibility: hidden;
 }
 .dropdown-content a {
   float: none;
