--- a/layout.css
+++ b/layout.css
@@ -88,14 +88,18 @@ footer {
 }
 
 .dropdown-content label {
-  float: none;
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-  line-height: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 16px;
+    background-color: #4CAF50;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 14px;
+    color: white;
 }
+
 .dropdown-content label:hover {
   background-color: #aba;
 }
