--- a/layout.css
+++ b/layout.css
@@ -24,6 +24,9 @@ footer {
 .page-wrapper {
 	margin: 2px;
 }
+.file-input {
+	display: hidden;
+}
 .row {
 	display: flex;
 	flex-direction: row;
@@ -66,15 +69,8 @@ footer {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-.file-input {
-    position: absolute;
-    left: -9999px;
-    opacity: 0;
-    width: 0;
-    height: 0;
-    visibility: hidden;
-}
-.dropdown-content a {
+.dropdown-content a,
+.drowpdown-content label{
   float: none;
   color: white;
   padding: 12px 16px;
@@ -83,19 +79,7 @@ footer {
   text-align: left;
   line-height: 6px;
 }
-.dropdown-content a:hover {
-  background-color: #aba;
-}
-
-.dropdown-content label {
-  float: none;
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-  line-height: 6px;
-}
+.dropdown-content a:hover,
 .dropdown-content label:hover {
   background-color: #aba;
 }
