--- a/layout.css
+++ b/layout.css
@@ -24,9 +24,6 @@ footer {
 .page-wrapper {
 	margin: 2px;
 }
-.file-input {
-	display: hidden;
-}
 .row {
 	display: flex;
 	flex-direction: row;
@@ -69,8 +66,7 @@ footer {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-.dropdown-content a,
-.drowpdown-content label{
+.dropdown-content a {
   float: none;
   color: white;
   padding: 12px 16px;
@@ -79,8 +75,7 @@ footer {
   text-align: left;
   line-height: 6px;
 }
-.dropdown-content a:hover,
-.dropdown-content label:hover {
+.dropdown-content a:hover {
   background-color: #aba;
 }
 .dropdown:hover .dropdown-content {
